src/objects/Meeting_Reports__c/Meeting_Reports__c.object-meta.xml
<CustomObject>
    <label>Meeting Reports</label>
    <nameField>
        <label>Meeting Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>