src/objects/Meeting_Reports__c/fields/Call_Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Report_Status__c</fullName>
    <inlineHelpText>Change the status to &quot;Submit for Approval&quot; once you are ready for your call report to be reviewed.</inlineHelpText>
    <label>Call Report Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submit for Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>