src/objects/Meeting_Reports__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter customer tour name, if applicable.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Call_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>