src/objects/Meeting_Reports__c/fields/Customer_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attendees__c</fullName>
    <label>Customer Attendees</label>
    <type>TextArea</type>
</CustomField>