src/objects/Meeting_Reports__c/fields/Executive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary__c</fullName>
    <label>Executive Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>