src/objects/Meeting_Reports__c/fields/FY_Forecasted_Bookings__c.field-meta.xml
<CustomField>
    <fullName>FY_Forecasted_Bookings__c</fullName>
    <label>FY Forecasted Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>