src/objects/Meeting_Reports__c/fields/FY_Forecasted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>FY_Forecasted_Revenue__c</fullName>
    <label>FY Forecasted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>