src/objects/Meeting_Reports__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>