src/objects/Meeting_Reports__c/fields/Market_Take__c.field-meta.xml
<CustomField>
    <fullName>Market_Take__c</fullName>
    <label>Market Take-Aways</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>