src/objects/Meeting_Reports__c/fields/Next_Step_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Action_Items__c</fullName>
    <description>WHAT is the Action Item, WHO owns it and WHEN is it due?</description>
    <label>Next Step/Action Items</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>