src/objects/Meeting_Reports__c/fields/No_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>No_of_Attendees__c</fullName>
    <label>No. of Attendees</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>