src/objects/Meeting_Reports__c/fields/Objectives__c.field-meta.xml
<CustomField>
    <fullName>Objectives__c</fullName>
    <label>Objectives</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>