src/objects/Meeting_Reports__c/fields/Opportunity_Look_Up__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Look_Up__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Look Up</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Call_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>