src/objects/Meeting_Reports__c/fields/Prior_FY_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Prior_FY_Bookings__c</fullName>
    <label>Prior FY Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>