src/objects/Meeting_Reports__c/fields/Search_Terms__c.field-meta.xml
<CustomField>
    <fullName>Search_Terms__c</fullName>
    <label>Search Terms</label>
    <type>TextArea</type>
</CustomField>