src/objects/Meeting_Reports__c/fields/Technical_Conclusions__c.field-meta.xml
<CustomField>
    <fullName>Technical_Conclusions__c</fullName>
    <label>Technical Conclusions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>