src/objects/Meeting_Reports__c/fields/Year_to_Date_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Year_to_Date_Bookings__c</fullName>
    <label>Year to Date Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>