src/objects/Meeting_Reports__c/recordTypes/Competitor.recordType-meta.xml
<RecordType>
    <fullName>Competitor</fullName>
    <active>true</active>
    <label>Competitor</label>
</RecordType>