src/objects/Meeting_Reports__c/listViews/My_Call_Reports.listView-meta.xml
<ListView>
    <fullName>My_Call_Reports</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Call Reports</label>
    <language>en_US</language>
</ListView>